Various Clean Up - Reducing number of build warnings - Removed some usages of Class.newInstance() which is deprecated - Suppressed warnings which should be ignored